--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -77,12 +78,12 @@
     <div class="wrap">
       <div class="profile"></div>
       <h1 class="main">정회상</h1>
-      <p class="sub">이탈리아 북부에 꼭 가보고 싶어요</p>
-      <a target="_blank" href="https://spartacodingclub.kr/">인스타그램</a>
-      <a target="_blank" href="https://hanghae99.spartacodingclub.kr/"
-        >페이스북</a
+      <p class="sub">링크모음, 이탈리아 북부가보자</p>
+      <a target="_blank" href="https://www.instagram.com/hoesang_chung/"
+        >인스타그램</a
       >
-      <a target="_blank" href="https://chang.spartacodingclub.kr/">블로그</a>
+
+      <a target="_blank" href="https://blog.naver.com/chs3679">블로그</a>
     </div>
   </body>
 </html>
