--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 
 html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="정회상 - 프로필 링크" />
-    <meta property="og:description" content="어서와 코딩은 처음이지?" />
-    <meta property="og:image" content="공유할 이미지" />
-    <title>르탄이 - 프로필 링크</title>
+   <body>
+    <div class="wrap">
+      <div class="profile"></div>
+      <h1 class="main">정회상(한니발,장기투자)</h1>
+      <p class="sub">링크모음, 이탈리아 꼭 간다.북부가보자</p>
+      <a target="_blank" href="https://www.instagram.com/hoesang_chung/"
+        >인스타그램</a
+      >
+
+      <a target="_blank" href="https://blog.naver.com/chs3679">블로그</a>
 
     <style>
       .profile {
@@ -74,88 +77,13 @@ html>
     </style>
     { }
   </head>
-  <body>
-    <div class="wrap">
-      <div class="profile"></div>
-      <h1 class="main">정회상</h1>
-      <p class="sub">링크모음, 이탈리아 북부가보자</p>
-      <a target="_blank" href="https://www.instagram.com/hoesang_chung/"
-        >인스타그램</a
-      >
-
-      <a target="_blank" href="https://blog.naver.com/chs3679">블로그</a>
+  
     </div>
   </body>
 </html>
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="그라데이션" />
-    <meta property="og:description" content="바다를 사랑하는 홍길동입니다." />
-    <meta
-      property="og:image"
-      content="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EA%B7%B8%EB%9D%BC%EB%8D%B0%EC%9D%B4%EC%85%98/%EB%B0%94%EB%8B%A4.png"
-    />
-    <title>그라데이션</title>
-    <style>
-      @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
-      * {
-        font-family: "Pretendard", serif;
-      }
-      body {
-        background: linear-gradient(180deg, #422b83 0%, #4a629f 100%);
-        height: 100vh;
-      }
-      .profile {
-        width: 100px;
-        height: 100px;
-        border-radius: 100%;
-        background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EA%B7%B8%EB%9D%BC%EB%8D%B0%EC%9D%B4%EC%85%98/%EB%B0%94%EB%8B%A4.png");
-        background-position: center;
-        background-size: cover;
-      }
-      .main {
-        color: #ffffff;
-        font-size: 18px;
-        size: 20px;
-        margin-top: 30px;
-        margin-bottom: 10px;
-      }
-      .sub {
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 400;
-        size: 14px;
-        margin-top: 0px;
-        margin-bottom: 30px;
-      }
-      .wrap {
-        width: 300px;
-        margin: 30px auto 0px auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-      .wrap > a {
-        width: 320px;
-        height: 59px;
-        border-radius: 5px;
-        background-color: white;
-        margin-bottom: 16px;
-        font-size: 16px;
-        font-weight: bold;
-        color: #382863;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        border: 1px solid #353432;
-      }
+  
     </style>
   </head>
   <body></body>
