--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="wrap"> </div>
       <div class="profile"></div>
       <h1 class="main">정회상(한니발,장기투자)</h1>
-      <p class="sub">링크모음, 이탈리아 꼭 간다.북부가보자</p>
+      <p class="sub">링크모음, 이탈리아 북부 꼭 가보기</p>
       <a target="_blank" href="https://www.instagram.com/hoesang_chung/"
          > 인스타그램</a>
       <a target="_blank" href="https://blog.naver.com/chs3679"> 블로그</a>
