--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         border: 2px solid rgb(198, 198, 218);
 
-        background-image: url("돌로미티.jpeg");
+        background-image: url(".jpeg");
         background-position: center;
         background-size: cover;
       }
